--- a/style.css
+++ b/style.css
@@ -40,20 +40,21 @@ blockquote {
 }
 
 /* Resume heading */
-.heading header { 
-    display: inline-block;
-    vertical-align: text-bottom;
+.heading {
+    display: table;
+    width: 100%;
+    height: 6em;
 }
 
 .myname {
-	font-size: 150%;
+	font-size: 300%;
     margin: 0;
-    float: left;
+    padding: 0.3em 0;
 	font-weight: 600;
-}
-
-.myname h1 {
-
+    display: table-cell;
+    vertical-align: top;
+    overflow: hidden;
+    width: 49.5%;
 }
 
 .heading header h2 {
@@ -64,7 +65,9 @@ blockquote {
 .contact-wrapper {
     font-size: 12px;
     text-align: right;
-    float: right;
+    display: table-cell;
+    vertical-align: top;
+    width: 49.5%;
 }
 
 .profile {
