--- a/style.css
+++ b/style.css
@@ -104,6 +104,14 @@ section h2 {
 	padding: 0 0 1em;
 }
 
+.note {
+    display: inline-block;
+    font-style: italic;
+    margin-bottom: 1.25em;
+	font-weight: 400;
+	font-size: 100%;
+}
+
 .item:last-child {
 	border-bottom: none;
 }
@@ -121,15 +129,6 @@ section h2 {
 
 .item header a {
 	display: inline-block;
-}
-
-.note {
-    display: inline-block;
-    font-style: italic;
-	margin: 0 0 0.5em 1em;
-    float: right;
-	font-weight: 400;
-	font-size: 100%;
 }
 
 .item .position {
