--- a/style.css
+++ b/style.css
@@ -11,9 +11,6 @@ body {
 em {
 	color: #999;
 }
-p {
-	font-size: 90%;
-}
 
 a {
 	color: #2C85B1;
@@ -161,7 +158,7 @@ section h2 {
 .date .endDateAppendedText,
 .date .endDate {
 	color: #6B6B6B;
-    font-weight: 200;
+    font-weight: 400;
 }
 
 .date .endDateAppendedText {
@@ -203,7 +200,7 @@ section h2 {
 .item .highlights {
     margin-top: 0;
 	list-style: circle inside;
-	font-size: 90%;
+	/* font-size: 90%; */
     padding-left: 2em;
     text-indent: -2em;
 }
